--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <meta name="keywords" content="">
     <link rel="shortcut icon" href="/src/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="57x57" href="/src/img/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/src/img/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/src/img/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/src/img/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/src/img/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/src/img/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/src/img/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/src/img/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/src/img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/src/img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/src/assets/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/src/assets/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/src/assets/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/src/assets/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/src/assets/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/src/assets/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/src/assets/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/src/assets/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/src/assets/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/src/assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png">
     <link rel="manifest" href="/src/manifest.json">
+    <link rel="stylesheet" href="styles.css">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -29,9 +30,9 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <img src="/src/img/favicon.png" alt="Logo do site">
+    <header class="flex-container-column">
+        <nav class="flex-container-row">
+            <img src="/src/assets/favicon.png" alt="Logo do site">
             <ol>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -41,7 +42,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="flex-container-column">
         <h1>Aprendendo <mark>HTML5</mark>, <mark>CSS3</mark>, e <mark>JavaScript</mark></h1>
         <h2>Escrever com <mark>semântica</mark>!</h2>
         <h2>Aplicar <mark>estilos</mark> modernos!</h2>
@@ -49,7 +50,7 @@
     </main>
 
     <section>
-        <img src="/src/img/HTML5.png" alt="Logo do HTML5">
+        <img src="/src/assets/HTML5.png" alt="Logo do HTML5">
         <h2>HTML5</h2>
         <h3>A HTML é a linguagem principal da web</h3>
         <p> A HTML5 modifica a forma de como escrevemos código e organizamos a
@@ -62,7 +63,7 @@
     </section>
         
     <section>
-        <img src="/src/img/CSS3.png" alt="Logo do CSS3">
+        <img src="/src/assets/CSS3.png" alt="Logo do CSS3">
         <h2>CSS3</h2>
         <h3>O CSS complementa o HTML</h3>
         <p>CSS é uma linguagem de estilo, também conhecida como folhas de estilo em cascata. É usada para personalização visual de um site. Ou seja, elas servem para otimizar o conteúdo das páginas e permitir uma apresentação mais amigável para o usuário.
@@ -71,7 +72,7 @@
     </section>
         
     <section>
-        <img src="/src/img/JS.png" alt="Logo do JavaScript">
+        <img src="/src/assets/JS.png" alt="Logo do JavaScript">
         <h2>JavaScript</h2>
         <h3>Com a HTML e o CSS, o JavaScript é uma das três principais tecnologias da web</h3>
         <p> O JavaScript é uma linguagem baseada em protótipos, multi-paradigma e dinâmica, suportando estilos de orientação a objetos, imperativos e declarativos (como por exemplo a programação funcional).
@@ -83,34 +84,40 @@
         <h2>Links Úteis</h2>
         <h3>Planejamento</h3>
         <ol>
-            <li><a href="">Figma</a></li>
-            <li><a href="">Google Fonts</a></li>
-            <li><a href="">Unicode.org</a></li>
-            <li><a href="">Favicon Generator</a></li>
-            <li><a href="">Bootstrap</a></li>
+            <li><img src="/src/assets/Figma_icon.png" alt="Icone Figma"><a href="">Figma</a></li>
+            <li><img src="/src/assets/Google_icon.png" alt="Icone Google Fonts"><a href="">Google Fonts</a></li>
+            <li><img src="/src/assets/Unicode_icon.png" alt="Icone Unicode"><a href="">Unicode.org</a></li>
+            <li><img src="/src/assets/Realfavicongenerator_icon.png" alt="Icone (Logo) Favicon"><a href="">Favicon Generator</a></li>
+            <li><img src="/src/assets/Bootstrap_icon.png" alt="Icone Bootstrap"><a href="">Bootstrap</a></li>
         </ol>
 
         <h3>Programação</h3>
         <ol>
-            <li><a href="">Git</a></li>
-            <li><a href="">Github</a></li>
-            <li><a href="">VS Code</a></li>
-            <li><a href="">Node.js</a></li>
+            <li><img src="/src/assets/Git_icon.png" alt="Icone Git"><a href="">Git</a></li>
+            <li><img src="/src/assets/Github_icon.png" alt="Icone Github"><a href="">Github</a></li>
+            <li><img src="/src/assets/Visual_Studio_Code_icon.png" alt="Icone VScode"><a href="">VS Code</a></li>
+            <li><img src="/src/assets/Node.js_icon.png" alt="Icone Node"><a href="">Node.js</a></li>
         </ol>
 
         <h3>Ajuda</h3>
         <ol>
-            <li><a href="">W3C</a></li>
-            <li><a href="">Validator HTML</a></li>
-            <li><a href="">Validator CSS</a></li>
-            <li><a href="">W3C Brasil</a></li>
-            <li><a href="">W3schools</a></li>
+            <li><img src="/src/assets/W3C_Brasil_icon.png" alt="Icone W3C Brasil"><a href="">W3C</a></li>
+            <li><img src="/src/assets/W3C_icon.png" alt="Icone W3C"><a href="">Validator HTML</a></li>
+            <li><img src="/src/assets/W3C_icon.png" alt="Icone W3C"><a href="">Validator CSS</a></li>
+            <li><img src="/src/assets/W3C_Brasil_icon.png" alt="Icone W3C Brasil"><a href="">W3C Brasil</a></li>
+            <li><img src="/src/assets/W3Schools_icon.png" alt="Icone W3Schools"><a href="">W3schools</a></li>
         </ol>
     </section>
 
     <footer>
-
-
+        <p>© 2022 - Jobson Tenório do Nascimento</p>
+        <ol>
+            <li><img src="/src/assets/WhatsApp_icon.png" alt=""></li>
+            <li><img src="/src/assets/Gmail_icon.png" alt=""></li>
+            <li><img src="/src/assets/YouTube_icon.png" alt=""></li>
+            <li><img src="/src/assets/Facebook_icon.png" alt=""></li>
+            <li><img src="/src/assets/Instagram_icon.png" alt=""></li>
+        </ol>
     </footer>
 </body>
 </html>
