Ajustado para mobile

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <header>
         <nav class="flex-container-row menu">
             <img src="/src/assets/favicon.png" alt="Logo do site" id="logo">
+            <img src="src/assets/3traco.png" alt="3 traços menu" id="traco3">
             <ul class="flex-container-row">
                 <li><a href="#HTML">HTML</a></li>
                 <li><a href="#CSS">CSS</a></li>
@@ -77,7 +78,7 @@
 
     <section id="CSS" class="flex-container-column">
         <div class="flex-container-row" id="InverterFlexBox">
-            <img src="/src/assets/CSS3.png" alt="Logo do CSS3">
+            <img src="/src/assets/CSS3.png" alt="Logo do CSS3" id="LogoCSS">
             <div class="flex-container-column section-details">
                 <h2>CSS3</h2>
                 <h3>O CSS complementa o HTML</h3>
@@ -91,7 +92,7 @@
 
     <section id="JavaScript" class="flex-container-column">
         <div class="flex-container-row ">
-            <img src="src/assets/JS.png" alt="Logo do JavaScript">
+            <img src="src/assets/JS.png" alt="Logo do JavaScript" id="LogoJavaScript">
             <div class="flex-container-column section-details">
                 <h2>JavaScript</h2>
                 <h3>Com a HTML e o CSS, o JavaScript é uma das três principais tecnologias da web</h3>
@@ -105,11 +106,15 @@
     <!-- Seção Links úteis -->
 
     <section id="LinksUteis" class="flex-container-column">
-        <h2>Links Úteis</h2>
+        <div id="Titulo">
+            <h2>Links Úteis</h2>
+        </div>
         <div class="flex-container-row alinharTop">
             <div class="listaDeLinks">
-                <h3>Planejamento</h3>
-                <ul class="flex-container-column">
+                <div id="Titulo1">
+                    <h3>Planejamento</h3>
+                </div>
+                <ul id="Icones" class="flex-container-column">
                     <li class="flex-container-row">
                         <img src="/src/assets/Figma_icon.png" alt="Icone Figma">
                         <a href="https://www.figma.com/">Figma</a>
@@ -138,8 +143,10 @@
             </div>
 
             <div class="listaDeLinks">
-                <h3>Programação</h3>
-                <ul class="flex-container-column">
+                <div id="Titulo">
+                    <h3>Programação</h3>
+                </div>
+                <ul id="Icones" class="flex-container-column">
                     <li>
                         <img src="/src/assets/Git_icon.png" alt="Icone Git">
                         <a href="https://git-scm.com/" target="_blank" rel="nofollow">Git</a>
@@ -163,8 +170,10 @@
             </div>
             
             <div class="listaDeLinks">
-                <h3>Ajuda</h3>
-                <ul class="flex-container-column">
+                <div id="Titulo">
+                    <h3>Ajuda</h3>
+                </div>
+                <ul id="Icones" class="flex-container-column">
                     <li>
                         <img src="/src/assets/W3C_Brasil_icon.png" alt="Icone W3C Brasil">
                         <a href="https://www.w3.org/" target="_blank" rel="nofollow">W3C</a>
